# PlayerVoiceFramework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Event_List.jsonc  LICENSE  LNTC_PVE_Event_List.jsonc  LNTC_PlayerVoiceEvents.esp  LNTC_PlayerVoiceEvents_Eventlist.jsonc  PCH.h  PCH.hpp  PVE-Conditions.jsonc  PVE-Events.jsonc  PlayerVoiceEvents.esp  README.md  compile_papyrus.bat  create-release.bat  setup-pyro.bat  skyrimse.ppj  vcpkg-configuration.json  vcpkg.json  vcpkg.json.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-rewrite.yml  build.yml
.run/: Build Plugin.run.xml  Build.run.xml
Data/: PlayerVoiceEvents.esp  PlayerVoiceFramework.esp
Data-Optional/: PlayerVoiceFramework.ini
Data/SKSE/Plugins/: PlayerVoiceFramework.yml
Data/Scripts/Source/: PVEPapyrusUtil.psc  PlayerVoiceFramework.psc  PlayerVoiceFrameworkAPI.psc  PlayerVoiceFramework_MCM.psc
Scripts/: LNTC_PVECellChangeDetector.pex  LNTC_PVECellChangeDetectorMarker.pex  LNTC_PVECombatMeleeAttack.pex  LNTC_PVECombatMeleeAttackPower.pex  LNTC_PVEStorageUtils.pex  LNTC_PVEUtils.pex  LNTC_PVEVoiceEvents.pex
Scripts/Source/: LNTC_PVECellChangeDetector.psc  LNTC_PVECellChangeDetectorMarker.psc  LNTC_PVECombatMeleeAttack.psc  LNTC_PVECombatMeleeAttackPower.psc  LNTC_PVESKSEFunctions.psc  LNTC_PVEStorageUtils.psc  LNTC_PVEUtils.psc  LNTC_PVEVoiceEvents.psc  LNTC_TIF__0000080F.psc  LNTC_TIF__00000810.psc  LNTC_TIF__00000811.psc  LNTC_TIF__00000812.psc  PVEMainQuestScript.psc
Sound/PlayerVoiceEvents/LocationData/: PVEDawnstar.json  PVEDragonBridge.json  PVEFalkreath.json  PVEHelgen.json  PVEIvarstead.json  PVEKarthwasten.json  PVEMorthal.json  PVERiverwood.json  PVERorikstead.json  PVEShorsStone.json  PVEWinterhold.json
Sound/PlayerVoiceEvents/QuestData/: PVEExampleQuest.json  PVETheGoldenClaw.json
Sound/PlayerVoiceEvents/SoundData/: config.example.json  config.json
Sound/PlayerVoiceEvents/SoundData/PVE/: lip_dummy.lip
buildscripts/: build-all.bat  build-plugin.bat  compile-papyrus-scripts.bat  create-mod.bat  create-release.bat
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
cmake/ports/rapidcsv/: portfile.cmake
cmake/ports/xbyak/: portfile.cmake  vcpkg.json
include/: API.h  ConditionManager.h  EventHandler.h  Logger.h  MemoryDataStorage.h  PVE.h  PapyrusInterface.h  SaveDataStorage.h  SoundManager.h  Util.h
include/PVE/: API.h  ConditionManager.h  DataType.h  EventHandler.h  Logger.h  MemoryDataStorage.h  PapyrusInterface.h  SaveDataStorage.h  SoundManager.h  Util.h
include/PVF/: API.h  ConditionManager.h  Logger.h  MemoryDataStorage.h  PapyrusInterface.h  SaveDataStorage.h  SoundManager.h  Util.h  configuration.hpp  logger.hpp  pack_manager.hpp  papyrus_interface.hpp  pvf_api.hpp  sound_manager.hpp  util.hpp
include/lntc/: lunatic_utils.hpp
reference/: Conditions.yaml  Events.yaml
reference/json_schemas/: PackConfig.json
reference/schemas/: PackConfig.yml
src/: API.cpp  ConditionManager.h  ConditionParser.h  CustomEventListener.cpp  CustomEventListener.h  EventHandler.cpp  EventListener.cpp  EventListener.h  Logger.h  LoopManager.cpp  LoopManager.h  Main.cpp  Main.h  PVECellChangedEvent.h  PapyrusFunctions.cpp  PapyrusFunctions.h  Plugin.cpp  SoundEvent.cpp  SoundEvent.h  SoundManager.cpp  Util.cpp  Utils.cpp  Utils.h
src/PVE/: API.cpp  EventHandler.cpp  Plugin.cpp  SoundManager.cpp  Util.cpp
src/PVF/: API.cpp  ConditionManager.cpp  Logger.cpp  MemoryDataStorage.cpp  PapyrusInterface.cpp  Plugin.cpp  SaveDataStorage.cpp  SoundManager.cpp  Util.cpp  pvf_api.cpp
tools/fomod/: ModuleConfig.xml  info.xml
tools/scripts/: build.bat  compile-scripts.bat  live-log.bat
